fixed the saved page for overlapping image/comments issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -349,11 +349,11 @@ a{
 .movie{
   overflow: hidden;
   margin: 4%;
-  height: 450px;
+  height: 100%;
 }
 .saved-img{
-  width:330px;
-  height: 450px;
+  width:100%;
+  height: 100%;
 }
 .movie .social{
   width: 100%;
@@ -380,14 +380,15 @@ color: #fff;
 transform: scale(1.5);
 }
 .movie .movie-review{
-  width: 78%;
+  width: 86%;
   background-color: #fff;
   position: absolute;
   bottom: 0;
-  left: 11%;
-  z-index: 1;
-  height: 45%;
+  left: 7%;
+  height: 55%;
 }
+
+
 .delete-button, .delete-button-search {
   position: absolute;
   font-weight: bolder;
@@ -408,13 +409,13 @@ margin: 2% 0 0 30%;
   margin: 0 4% 0 0;
 }
 .rt-image{
-  width: 15%;
-  height: 20%;
+  width: 10%;
+  height: 10%;
   margin-left: 3%;
 }
 .rt-image3{
-  width: 15%;
-  height: 10%;
+  width: 10%;
+  height: 5%;
   margin-left: 3%;
   margin-right: 1%;
 }
